.tanzu/config/k8sGatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/spring-music
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "443"
    healthcheck.gslb.tanzu.vmware.com/service: spring-music
  name: spring-music-http-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-gateway
      sectionName: https-spring-music
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: spring-music
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
